testsuite/tests/properties/invalid_domain/with_entity_subtype/test.lkt
from common import FooNode

class Example: FooNode implements TokenNode {
    fun get_var(): LogicVar = raise[LogicVar] PropertyError()
    fun get_domain(): Array[Entity[Example]] =
        raise[Array[Entity[Example]]] PropertyError()
    fun get_eq(): Equation = %domain(self.get_var(), node.get_domain())
}
